[workspace]
resolver = "2"
members = ["ore-guide", "ore-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.16"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.12", features = ["derive"] }
serde_json = "1.0"
drillx = "2.1.0"
ore-api = "2.1.9"
ore-boost-api = "0.2.0"
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
chrono = "0.4.38"
colored = "2.0"
rand = "0.8.4"
futures = "0.3.30"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3   # Optimize for binary size. You can use "3" for full optimizations if binary size isn't an issue.
codegen-units = 1 # Better optimization with fewer codegen units
lto = true        # Enable Link Time Optimization (LTO)
debug = false     # Disable debug info to reduce binary size
panic = 'abort'   # Reduces the binary size further by not including unwinding information
rpath = false
incremental = false
overflow-checks = false