[package]
name = "ore-guide"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
rand = { workspace = true }
drillx = { workspace = true }
clap = { workspace = true }
ore-api = { workspace = true }
ore-boost-api = { workspace = true }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
cached = "0.46.1"
bincode = "1.3.3"
indicatif = "0.17.8"
url = "2.5"
base64 = "0.13.0"
mpl-token-metadata = "4.1.2"
spl-token = { version = "^4", features = ["no-entrypoint"] }
steel = { version = "1.2.0" }