[package]
name = "ore-worker"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
solana-rpc-client = { workspace = true }
drillx = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1.0"
num_cpus = "1.16.0"
core_affinity = "0.8.1"
bs58 = "0.5.1"
